<package>
  <name>rock_base-types_typekit</name>
  <version>0.1.0</version>
  
  <description>rock_base-types_typekit creates a typekit from the base types for the Robot Construction Kit</description>
  

  <maintainer email="manuel.barkey@hansrobot.de">Manuel Barkey</maintainer>

  <license>BSD</license>
<!-- 
  <url type="website">http://ros.org/wiki/rtt_ros_integration_example</url> -->

  <author email="manuel.barkey@hansrobot.de">Manuel Barkey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>std_msgs</build_depend> 

  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_std_msgs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>
</package>
